tests/tagged_enum_struct_call_bad.hop
// Verifies struct payload variants reject call construction.
enum Item u8 {
	Line struct {
		start i32
		end   i32
	}
}

fn main() {
	_ = Item.Line(1, 2)
}
